# ConfigReader

./: .gitignore  CMakeLists.txt  ConfigReader.cpp  ConfigReader.hpp  Doxyfile  README.md
unit_test/: CMakeLists.txt  ConfigReaderTest.cpp  test_config.ini
